[gd_scene load_steps=7 format=2]

[ext_resource path="res://Prototype/SeedManagement/SwingingVine.gd" type="Script" id=1]
[ext_resource path="res://Prototype/Levels/Resources/swinging_vine.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6, 101 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 27.5, 110.5 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Swing"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 40.0, 0.0, -40.0, 0.0 ]
}

[node name="Liana" type="Node2D"]
position = Vector2( 497, 264.173 )
script = ExtResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Pivot"]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Area2D"]
position = Vector2( -4, 100.827 )
shape = SubResource( 7 )

[node name="CollisionShape2DExtra" type="CollisionShape2D" parent="Pivot/Area2D"]
position = Vector2( -2.5, 110.327 )
shape = SubResource( 10 )
disabled = true

[node name="SpriteLiana" type="Sprite" parent="Pivot"]
position = Vector2( -2.99994, 103.827 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Position2DPivot" type="Position2D" parent="Pivot"]
position = Vector2( 0, 200 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Swing"
anims/RESET = SubResource( 8 )
anims/Swing = SubResource( 9 )

[node name="Position2DCenter" type="Position2D" parent="."]
position = Vector2( 0, 200 )

[connection signal="body_shape_entered" from="Pivot/Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Pivot/Area2D" to="." method="_on_Area2D_body_shape_exited"]
